<resources>
    <string name="app_name" translatable="false">Exchangr</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="add_to_watch_list">Add to watch list</string>
    <string name="base">Base</string>
    <string name="quote">Quote</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="forgot_password_sub_text">Please enter the email associated with your account.</string>
    <string name="send_code">Send code</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="currency">Currency</string>
    <string name="change">Change</string>
    <string name="rate">Rate</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="supported_symbols">Supported Symbols</string>
    <string name="log_out">Log out</string>
</resources>
