<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_item_search_view"
            android:icon="@drawable/ic_search"
            app:showAsAction="ifRoom"
            app:actionViewClass="android.widget.SearchView"
            android:title="@string/search" />

        <item
            android:id="@+id/menu_item_add_button"
            android:icon="@drawable/ic_add"
            app:showAsAction="ifRoom"
            android:title="@string/add" />
    </group>

    <group>
        <item
            android:id="@+id/menu_item_swipe_refresh"
            app:showAsAction="never"
            android:title="@string/refresh" />

        <item
            android:id="@+id/menu_item_supported_symbols"
            app:showAsAction="never"
            android:title="@string/supported_symbols" />

        <item
            android:id="@+id/menu_item_log_out"
            app:showAsAction="never"
            android:title="@string/log_out" />

    </group>
</menu>